--- a/program.html
+++ b/program.html
@@ -70,7 +70,7 @@ tr:nth-child(even) {
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 
 <div class="container" style="font-size:18px;">
-This workshop will be held at F203 at Annex Hall.<br>
+This workshop will be held at <b>F203 at Annex Hall</b>.<br>
 See the program for the whole conference <a href="https://2024.ieee-icra.org/program/" target="_blank">here</a><br><br>
 <table>
   <tr>
@@ -100,7 +100,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <li><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
     <li><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
    </ul></td>
-  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
 	
   <tr>
     <td><b>10:30-11:15</b></td>
