--- a/program.html
+++ b/program.html
@@ -110,7 +110,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 
   <tr>
     <td><b>11:15-12:00</b></td>
-    <td><a href="speakers.html#dana">Dana Kulić</a></td>
+    <td><a class="a_link" href="speakers.html#dana">Dana Kulić</a></td>
 	<td>To be announced</td>  
   </tr>
 
@@ -123,9 +123,9 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <td rowspan="4"><b>13:30-14:00</b></td>
     <td colspan="2" rowspan="4">Contribution Talks
 	  <ul>
-		  <li><a href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
-		  <li><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></li>
-		  <li><a href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></li>
+		  <li><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
+		  <li><a class="a_link" href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></li>
+		  <li><a class="a_link" href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></li>
 	  </ul></td>
   </tr><tr></tr><tr></tr><tr></tr>
 
