--- a/program.html
+++ b/program.html
@@ -137,7 +137,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 
   <tr>
     <td><b>14:45-15:30</b></td>
-    <td><a href="speakers.html#pulkit" target="_blank">Pulkit Agrawal</a></td>
+    <td><a class="a_link" href="speakers.html#pulkit" target="_blank">Pulkit Agrawal</a></td>
     <td>Human-in-the-loop Sensorimotor Learning</td>
   </tr>
 
