--- a/program.html
+++ b/program.html
@@ -89,18 +89,9 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
   <tr>
-    <td rowspan="8"><b>10:00-10:30</b></td>
-    <td colspan="2" rowspan="8">Coffee break and poster session
-   <ul>
-    <li><a class="a_link" href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
-    <li><a class="a_link" href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
-    <li><a class="a_link" href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
-    <li><a class="a_link" href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
-    <li><a class="a_link" href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
-    <li><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
-    <li><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
-   </ul></td>
-  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+    <td><b>10:00-10:30</b></td>
+    <td colspan="2">Coffee break and poster session</td>
+  </tr>
 	
   <tr>
     <td><b>10:30-11:15</b></td>
@@ -142,18 +133,9 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
   <tr>
-    <td rowspan="8"><b>15:30-16:00</b></td>
-    <td colspan="2" rowspan="8">Coffee break and poster session
-   <ul>
-    <li><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></li>
-    <li><a href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></li>	  
-    <li><a href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></li>
-    <li><a href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></li>
-    <li><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></li>	  
-    <li><a href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></li>
-    <li><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></li>	  
-   </ul></td>
-  </tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr><tr></tr>
+    <td><b>15:30-16:00</b></td>
+    <td colspan="2">Coffee break and poster session</td>
+  </tr>
 
   <tr>
     <td><b>16:00-16:45</td>
@@ -166,6 +148,22 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
 </table>
+<p>Contributions:</p>
+<table>
+  <tr>
+    <th>Authors</th>
+    <th>Title</th>
+  </tr>
+    <tr>Finn Rietz, Erik Schaffernicht, Stefan Heinrich and Johannes Andreas Stork</tr><tr><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></tr>
+    <tr>Liqun Zhao, Keyan Miao, Konstantinos Gatsis and Antonis Papachristodoulou</tr><tr><a class="a_link" href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></tr>
+    <tr>Homayoun Honari, Mehran Ghafarian Tamizi and Homayoun Najjaran</tr><tr><a class="a_link" href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></tr>	  
+    <tr>Ajsal Shereef Palattuparambil, Thommen George Karimpanal and Santu Rana</tr><tr><a class="a_link" href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></tr>
+    <tr>William Z. Ye, Eduardo B. Sandoval, Pamela Carreno-Medrano and Francisco Cruz</tr><tr><a class="a_link" href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></tr>
+    <tr>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</tr><tr><a class="a_link" href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></tr>
+    <tr>Nils Dengler, Sicong Pan, Vamsi Kalagaturu, Rohit Menon, Murad Dawood and Maren Bennewitz</tr><tr><a class="a_link" href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></tr>
+    <tr>Mauro Martini, Noé Pérez-Higueras, Andrea Ostuni, Marcello Chiaberge, Fernando Caballero Benítez and Luis Merino</tr><tr><a class="a_link" href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></tr>	  
+    <tr>Chanin Eom, Dongsu Lee and Minhae Kwon</tr><tr><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></tr>
+    <tr>Carlos Gutierrez-Alvarez, Rafael Flor-Rodríguez-Rabadán, Asako Kanezaki and Roberto Javier López-Sastre</tr><tr><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></tr>	  
 </div>
 
 		</div>
