--- a/program.html
+++ b/program.html
@@ -164,6 +164,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <tr>Mauro Martini, Noé Pérez-Higueras, Andrea Ostuni, Marcello Chiaberge, Fernando Caballero Benítez and Luis Merino</tr><tr><a class="a_link" href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></tr>	  
     <tr>Chanin Eom, Dongsu Lee and Minhae Kwon</tr><tr><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></tr>
     <tr>Carlos Gutierrez-Alvarez, Rafael Flor-Rodríguez-Rabadán, Asako Kanezaki and Roberto Javier López-Sastre</tr><tr><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></tr>	  
+</table>
 </div>
 
 		</div>
