--- a/program.html
+++ b/program.html
@@ -155,15 +155,15 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <th>Title</th>
   </tr>
     <tr><td>Finn Rietz, Erik Schaffernicht, Stefan Heinrich and Johannes Andreas Stork</td><td><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></td></tr>
-    <tr><td>Liqun Zhao, Keyan Miao, Konstantinos Gatsis and Antonis Papachristodoulou</td><td><a class="a_link" href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></td></tr>
+    <tr><td>Liqun Zhao, Keyan Miao, Konstantinos Gatsis and Antonis Papachristodoulou</td><td><a href="2024/submission_2.pdf" target="_blank">NLBAC: A Neural Ordinary Differential Equations-based Framework for Stable and Safe Reinforcement Learning in Human-aligned Tasks</a></td></tr>
     <tr><td>Homayoun Honari, Mehran Ghafarian Tamizi and Homayoun Najjaran</td><td><a class="a_link" href="2024/submission_3.pdf" target="_blank">Safety Optimized Reinforcement Learning via Multi-Objective Policy Optimization</a></td></tr>	  
-    <tr><td>Ajsal Shereef Palattuparambil, Thommen George Karimpanal and Santu Rana</td><td><a class="a_link" href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></td></tr>
+    <tr><td>Ajsal Shereef Palattuparambil, Thommen George Karimpanal and Santu Rana</td><td><a href="2024/submission_4.pdf" target="_blank">Zero-shot Personalisation via Dynamic Policy Fusion</a></td></tr>
     <tr><td>William Z. Ye, Eduardo B. Sandoval, Pamela Carreno-Medrano and Francisco Cruz</td><td><a class="a_link" href="2024/submission_5.pdf" target="_blank">Contextual Affordances for Safe Exploration in Robotic Scenarios</a></td></tr>
-    <tr><td>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</td><td><a class="a_link" href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></td></tr>
+    <tr><td>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</td><td><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></td></tr>
     <tr><td>Nils Dengler, Sicong Pan, Vamsi Kalagaturu, Rohit Menon, Murad Dawood and Maren Bennewitz</td><td><a class="a_link" href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></td></tr>
-    <tr><td>Mauro Martini, Noé Pérez-Higueras, Andrea Ostuni, Marcello Chiaberge, Fernando Caballero Benítez and Luis Merino</td><td><a class="a_link" href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></td></tr>	  
+    <tr><td>Mauro Martini, Noé Pérez-Higueras, Andrea Ostuni, Marcello Chiaberge, Fernando Caballero Benítez and Luis Merino</td><td><a href="2024/submission_8.pdf" target="_blank">Adaptive Human-Aware Local Planner with Reinforcement Learning</a></td></tr>	  
     <tr><td>Chanin Eom, Dongsu Lee and Minhae Kwon</td><td><a class="a_link" href="2024/submission_9.pdf" target="_blank">Imperfect Dataset is Enough: Reinforcement Learning with Selective Imitation from Prior Data</a></td></tr>
-    <tr><td>Carlos Gutierrez-Alvarez, Rafael Flor-Rodríguez-Rabadán, Asako Kanezaki and Roberto Javier López-Sastre</td><td><a class="a_link" href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></td></tr>	  
+    <tr><td>Carlos Gutierrez-Alvarez, Rafael Flor-Rodríguez-Rabadán, Asako Kanezaki and Roberto Javier López-Sastre</td><td><a href="2024/submission_10.pdf" target="_blank">OffNav: Offline Reinforcement Learning for Visual Semantic Navigation</a></td></tr>	  
 </table>
 </div>
 
