--- a/speakers.html
+++ b/speakers.html
@@ -127,7 +127,7 @@ tr:nth-child(even) {
 			<strong><a href="https://scholar.google.com/citations?user=sL0KJlQAAAAJ" target="_blank">Dana Kulić</a></br>
 			<a href="https://www.monash.edu/engineering/robotics" target="_blank">Monash Robotics.</a><br/><a href="https://www.monash.edu/" target="_blank">Monash University</a></br></br>
 			</strong></br>
-			<b>To be announced</b>
+			<b>Reinforcement Learning for HRI: The Role of Simulations</b>
                         </br> 
 		</p>
 	</div>
