--- a/program.html
+++ b/program.html
@@ -102,7 +102,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   <tr>
     <td><b>11:15-12:00</b></td>
     <td><a class="a_link" href="speakers.html#dana">Dana Kulić</a></td>
-	<td>To be announced</td>  
+	<td>Reinforcement Learning for HRI: The Role of Simulations</td>  
   </tr>
 
   <tr>
