--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ Licence URI: http://www.os-templates.com/template-terms
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 
+<b>Zoom</b> link <a href="https://us06web.zoom.us/j/86313424385?pwd=k4PakitP2zVip2vbgLrD2clMDWQiaH.1" target="_blank">here</a>.<br>
+Join us at <a href="https://slido.com" target="_blank">slido.com</a>: #2280 624.<br>
+	
 <strong>Workshop description:</strong></br></br>
 
 A slew of advances in the field of reinforcement learning (RL) have resulted in significant improvements in learning efficiency for autonomous agents and robots. 
