--- a/index.html
+++ b/index.html
@@ -63,12 +63,11 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
 			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a>, <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a> and <a href="https://www.ieee-ras.org/energy-environment-and-safety-issues-in-robotics-and-automation" target="_blank">TC-EESI</a></br>
 			May 17th, 2024 - Yokohama, Japan <br/>
-			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a>
+			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a><br><br>
+			<b>Zoom</b> link <a href="https://us06web.zoom.us/j/86313424385?pwd=k4PakitP2zVip2vbgLrD2clMDWQiaH.1" target="_blank">here</a>.<br>
+			Join us at <a href="https://slido.com" target="_blank">slido.com</a>: #2280 624.<br><br>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
-
-<b>Zoom</b> link <a href="https://us06web.zoom.us/j/86313424385?pwd=k4PakitP2zVip2vbgLrD2clMDWQiaH.1" target="_blank">here</a>.<br>
-Join us at <a href="https://slido.com" target="_blank">slido.com</a>: #2280 624.<br>
 	
 <strong>Workshop description:</strong></br></br>
 
