--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@ Licence URI: http://www.os-templates.com/template-terms
 			May 17th, 2024 - Yokohama, Japan <br/>
 			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a><br><br>
 			<b>Zoom</b> link <a href="https://us06web.zoom.us/j/86313424385?pwd=k4PakitP2zVip2vbgLrD2clMDWQiaH.1" target="_blank">here</a>.<br>
-			Join us at <a href="https://slido.com" target="_blank">slido.com</a>: #2280 624.<br><br>
+			Join us at <a href="https://slido.com" target="_blank">slido.com</a>: #2280 624.
+			In-person: <b>F203 at Annex Hall</b>.<br>
+			See the program for the whole conference <a href="https://2024.ieee-icra.org/program/" target="_blank">here</a><br><br><br><br>
 <div class="container" style="text-align:justify; font-size:18px;">
 </br></br>
 	
