--- a/speakers.html
+++ b/speakers.html
@@ -158,7 +158,7 @@ tr:nth-child(even) {
 			<tr><td>Eiji Uchibe</td><td>Dept. of Brain Robot Interface, Advanced Telecommunications Research Institute International</td></tr>
 			<tr><td>Pulkit Agrawal</td><td>Computer Science and Artificial Intelligence Lab, Massachusetts Institute of Technology</td></tr>
 			<tr><td>Priya Sundaresan</td><td>Computer Science, Stanford</td></tr>
-			<tr><td>Jens Kober</td>Cognitive Robotics Dept., T.U. Delft</td></tr>
+			<tr><td>Jens Kober</td><td>Cognitive Robotics Dept., T.U. Delft</td></tr>
 		</table>
 	</div>
 
