--- a/program.html
+++ b/program.html
@@ -148,6 +148,20 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
 </table>
+
+<p><b>Best Workshop paper:</b></p><br>
+	<p>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</td><td><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></p>
+
+<p>Runner-Up: Best paper:</p>
+	<table>
+		<tr>
+		   <th>Authors</th>
+    		   <th>Title</th>
+		</tr>
+		<tr><td>Finn Rietz, Erik Schaffernicht, Stefan Heinrich and Johannes Andreas Stork</td><td><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></td></tr>
+		<tr><td>Nils Dengler, Sicong Pan, Vamsi Kalagaturu, Rohit Menon, Murad Dawood and Maren Bennewitz</td><td><a class="a_link" href="2024/submission_7.pdf" target="_blank">Learning Interactive Viewpoint Planning for Foresighted Object Discovery Considering Human Preferences</a></td></tr>
+	</table>
+	
 <p>Accepted papers:</p>
 <table>
   <tr>
