--- a/program.html
+++ b/program.html
@@ -155,7 +155,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
 		   <th>Authors</th>
     		   <th>Title</th>
 		</tr>
-		<tr><td>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</td><td><a href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></td></tr>
+		<tr><td>Jorge de Heuvel, Tharun Sethuraman and Maren Bennewitz</td><td><a class="a_link" href="2024/submission_6.pdf" target="_blank">Adaptive Robot Navigation: A Human-Centered and Multi-Objective Approach with Demonstrations</a></td></tr>
 	</table>	
 
 <p>Runner-Up: Best papers</p>
