--- a/organizers.html
+++ b/organizers.html
@@ -174,6 +174,7 @@ tr:nth-child(even) {
 			<tr><td>Leimin Tian</td><td>Monash University</td><td>Australia</td></tr>
 			<tr><td>Lingheng Meng</td><td>Monash University</td><td>Australia</td></tr>
 			<tr><td>Xin Hao</td><td>Deakin University</td><td>Australia</td></tr>
+			<tr><td>Simon Khan</td><td>Air Force Research Lab</td><td>United States</td></tr>
 		</table>
 	</div>
 
