--- a/program.html
+++ b/program.html
@@ -70,8 +70,7 @@ tr:nth-child(even) {
 		<div id="content" style="width:95%; text-align:center; margin:10px">
 
 <div class="container" style="font-size:18px;">
-This workshop will be held at <b>F203 at Annex Hall</b>.<br>
-See the program for the whole conference <a href="https://2024.ieee-icra.org/program/" target="_blank">here</a><br><br>
+This workshop was held at <b>F203 at Annex Hall</b>.<br>
 <table>
   <tr>
     <th><a href="https://www.timeanddate.com/worldclock/japan/yokohama" target="_blank">Yokohama timezone</a></th>
@@ -83,7 +82,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
     <td colspan="2">Welcome and introduction</td>
   </tr>
   <tr>
-    <td><b>09:15-10:00</b></td>
+    <td><b>09:15-10:00</b><br><a href="https://www.youtube.com/watch?v=LUvjickfqdM" target="_blank">Video here</a></td>
     <td><a href="speakers.html#gchalvatzaki">Georgia Chalvatzaki</a></td>
     <td>Safe and Coordinated Human-Robot Interactions</td>
   </tr>
@@ -94,13 +93,13 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 	
   <tr>
-    <td><b>10:30-11:15</b></td>
+    <td><b>10:30-11:15</b><br><a href="https://www.youtube.com/watch?v=xd-TVZl8DNg" target="_blank">Video here</a></td>
     <td><a href="speakers.html#mgombolay">Matthew Gombolay</a></td>
     <td>Interpretable and Interactive Reinforcement Learning in Human-Robot Teaming</td>
   </tr>
 
   <tr>
-    <td><b>11:15-12:00</b></td>
+    <td><b>11:15-12:00</b><br><a href="https://www.youtube.com/watch?v=xd-TVZl8DNg" target="_blank">Video here</a></td>
     <td><a class="a_link" href="speakers.html#dana">Dana Kulić</a></td>
 	<td>Reinforcement Learning for HRI: The Role of Simulations</td>  
   </tr>
@@ -111,7 +110,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 	
   <tr>
-    <td rowspan="4"><b>13:30-14:00</b></td>
+    <td rowspan="4"><b>13:30-14:00</b><br><a href="https://www.youtube.com/watch?v=82Mjs4Lyvn4" target="_blank">Video here</a></td>
     <td colspan="2" rowspan="4">Contribution Talks
 	  <ul>
 		  <li><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
@@ -121,13 +120,13 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr><tr></tr><tr></tr><tr></tr><tr></tr>
 
   <tr>
-    <td><b>14:00-14:45</b></td>
+    <td><b>14:00-14:45</b><br><a href="https://www.youtube.com/watch?v=k_dTjGSsg-8" target="_blank">Video here</a></td>
 <td><a href="speakers.html#euchibe">Eiji Uchibe</a></td>
     <td>Human-in-the-loop Policy Learning by Co-Evolution of Human and Generative Imitation Learning</td>
   </tr>
 
   <tr>
-    <td><b>14:45-15:30</b></td>
+    <td><b>14:45-15:30</b><br><a href="https://www.youtube.com/watch?v=k_dTjGSsg-8" target="_blank">Video here</a></td>
     <td><a class="a_link" href="speakers.html#pulkit" target="_blank">Pulkit Agrawal</a></td>
     <td>Human-in-the-loop Sensorimotor Learning</td>
   </tr>
@@ -138,7 +137,7 @@ See the program for the whole conference <a href="https://2024.ieee-icra.org/pro
   </tr>
 
   <tr>
-    <td><b>16:00-16:45</td>
+    <td><b>16:00-16:45</b><br><a href="https://www.youtube.com/watch?v=07ldPTijKww" target="_blank">Video here</a></td>
     <td colspan="2">Panel Discussion</td>
   </tr>
 
