--- a/program.html
+++ b/program.html
@@ -99,7 +99,7 @@ This workshop was held at <b>F203 at Annex Hall</b>.<br>
   </tr>
 
   <tr>
-    <td><b>11:15-12:00</b><br><a href="https://www.youtube.com/watch?v=xd-TVZl8DNg" target="_blank">Video here</a></td>
+    <td><b>11:15-12:00</b><br><a class="a_link" href="https://www.youtube.com/watch?v=xd-TVZl8DNg" target="_blank">Video here</a></td>
     <td><a class="a_link" href="speakers.html#dana">Dana Kulić</a></td>
 	<td>Reinforcement Learning for HRI: The Role of Simulations</td>  
   </tr>
@@ -110,7 +110,7 @@ This workshop was held at <b>F203 at Annex Hall</b>.<br>
   </tr>
 	
   <tr>
-    <td rowspan="4"><b>13:30-14:00</b><br><a href="https://www.youtube.com/watch?v=82Mjs4Lyvn4" target="_blank">Video here</a></td>
+    <td rowspan="4"><b>13:30-14:00</b><br><a class="a_link" href="https://www.youtube.com/watch?v=82Mjs4Lyvn4" target="_blank">Video here</a></td>
     <td colspan="2" rowspan="4">Contribution Talks
 	  <ul>
 		  <li><a class="a_link" href="2024/submission_1.pdf" target="_blank">Towards Interpretable Reinforcement Learning with Constrained Normalizing Flow Policies</a></li>
@@ -126,7 +126,7 @@ This workshop was held at <b>F203 at Annex Hall</b>.<br>
   </tr>
 
   <tr>
-    <td><b>14:45-15:30</b><br><a href="https://www.youtube.com/watch?v=k_dTjGSsg-8" target="_blank">Video here</a></td>
+    <td><b>14:45-15:30</b><br><a class="a_link" href="https://www.youtube.com/watch?v=k_dTjGSsg-8" target="_blank">Video here</a></td>
     <td><a class="a_link" href="speakers.html#pulkit" target="_blank">Pulkit Agrawal</a></td>
     <td>Human-in-the-loop Sensorimotor Learning</td>
   </tr>
@@ -137,7 +137,7 @@ This workshop was held at <b>F203 at Annex Hall</b>.<br>
   </tr>
 
   <tr>
-    <td><b>16:00-16:45</b><br><a href="https://www.youtube.com/watch?v=07ldPTijKww" target="_blank">Video here</a></td>
+    <td><b>16:00-16:45</b><br><a class="a_link" href="https://www.youtube.com/watch?v=07ldPTijKww" target="_blank">Video here</a></td>
     <td colspan="2">Panel Discussion</td>
   </tr>
 
