--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@ Licence URI: http://www.os-templates.com/template-terms
 			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
 			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a>, <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a> and <a href="https://www.ieee-ras.org/energy-environment-and-safety-issues-in-robotics-and-automation" target="_blank">TC-EESI</a></br>
 			May 17th, 2024 - Yokohama, Japan <br/>
-			Accepted at <a href="https://2024.ieee-icra.org/" target="_blank">ICRA 2024</a><br><br>
+			(Proposal for) <a href="https://2025.ieee-icra.org/" target="_blank">ICRA 2025</a><br><br>
 			In-person: <b>F203 at Annex Hall</b>.<br>
-			See the program for the whole conference <a href="https://2024.ieee-icra.org/program/" target="_blank">here</a><br><br>
+			See the program for the whole conference <a href="https://2025.ieee-icra.org/" target="_blank">here</a><br><br>
 <div class="container" style="text-align:justify; font-size:18px;">
 	
 <strong>Workshop description:</strong></br></br>
@@ -113,10 +113,10 @@ We particularly encourage authors to share their in-progress works in the form o
 <br/>
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:   <del>February 26, 2024</del> <b style="color:red">March 11, 2024</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
-    Notification of acceptance: April 12, 2024. </br>
-    Camera-ready version: May 6, 2024. </br>
-    Workshop: May 17, 2024. </br></br>
+    Paper and extended abstract submission deadline: February 26, 2025. </br>
+    Notification of acceptance: April 12, 2025. </br>
+    Camera-ready version: May 6, 2025. </br>
+    Workshop: May 19-23, 2025. </br></br>
 
 </br>
 
