--- a/index.html
+++ b/index.html
@@ -60,12 +60,8 @@ Licence URI: http://www.os-templates.com/template-terms
     <div id="container " class="clear text-center">
       <!-- ####################################################################################################### -->
 		<div id="content" style="width:95%; text-align:center; font-size:18px; margin:10px">
-			<strong>Workshop on Human-aligned Reinforcement Learning for Autonomous Agents and Robots</strong></br>
-			Endorsed by <a href="https://www.ieee-ras.org/cognitive-robotics" target="_blank">TC-CoRo</a>, <a href="https://www.ieee-ras.org/machine-learning-for-automation" target="_blank">TC-MCfA</a> and <a href="https://www.ieee-ras.org/energy-environment-and-safety-issues-in-robotics-and-automation" target="_blank">TC-EESI</a></br>
-			May 17th, 2024 - Yokohama, Japan <br/>
 			(Proposal for) <a href="https://2025.ieee-icra.org/" target="_blank">ICRA 2025</a><br><br>
-			In-person: <b>F203 at Annex Hall</b>.<br>
-			See the program for the whole conference <a href="https://2025.ieee-icra.org/" target="_blank">here</a><br><br>
+			Atlanta, United States <br/>
 <div class="container" style="text-align:justify; font-size:18px;">
 	
 <strong>Workshop description:</strong></br></br>
