--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html">Program</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2024">2024@ICRA</a></li>
         <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021@ICDL</a></li>
       </ul>
     </div>
