--- a/previous.html
+++ b/previous.html
@@ -77,7 +77,7 @@ tr:nth-child(even) {
     <th>Conference</th>
     <th>Website</th>
   </tr>
-    <tr><td>2021</td><td>ICDL</td><td><a href="https://harlworkshop.github.io/2021" target="_blank">Click here</a></td></tr>
+    <tr><td>2021</td><td>ICDL</td><td><a class= "a_link" href="https://harlworkshop.github.io/2021" target="_blank">Click here</a></td></tr>
     <tr><td>2024</td><td>ICRA</td><td><a href="https://harlworkshop.github.io/2024" target="_blank">Click here</a></td></tr>
 </table>
 	
