--- a/previous.html
+++ b/previous.html
@@ -43,7 +43,7 @@ tr:nth-child(even) {
 <body id="top">
 
 <center>
-<img src="https://harlworkshop.github.io/images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="https://harlworkshop.github.io/images/harl_icra2025.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
