--- a/cfp.html
+++ b/cfp.html
@@ -37,7 +37,7 @@ tr:nth-child(even) {
 <body id="top">
 
 <center>
-<img src="images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl_icra2025.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -50,7 +50,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html">Program</a></li>
-        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021@ICDL</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/previous.html">Previous versions</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -79,10 +79,10 @@ Submissions will be peer reviewed consistent with the journal practices.
 
 <strong>Important dates:</strong></br></br>
 
-    Paper and extended abstract submission deadline:   <del>February 26, 2024</del> <b style="color:red">March 11, 2024</b> (23:59 <a href="https://www.timeanddate.com/time/zones/aoe" target="_blank">AoE</a>, <b style="color:red">extended deadline</b>)</br>
-    Notification of acceptance: April 12, 2024. </br>
-    Camera-ready version: May 6, 2024. </br>
-    Workshop: May 17, 2024. </br></br>
+    Paper and extended abstract submission deadline: February 26, 2025. </br>
+    Notification of acceptance: April 12, 2025. </br>
+    Camera-ready version: May 6, 2025. </br>
+    Workshop: May 19-23, 2025. </br></br>
 
 </br>
 <strong>Journal Special Issue:</strong></br></br>
