--- a/speakers.html
+++ b/speakers.html
@@ -37,7 +37,7 @@ tr:nth-child(even) {
 <body id="top">
 
 <center>
-<img src="images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl_icra2025.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -50,7 +50,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html">Program</a></li>
-        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021@ICDL</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/previous.html">Previous versions</a></li>
       </ul>
     </div>
     <!-- ###### -->
@@ -76,62 +76,7 @@ tr:nth-child(even) {
                         </br> 
 		</p>
 	</div>
-<!--
-	<div id="slevine" style="border-top: solid 1px #323232; min-height: 260px;">
-		<img src="images/display/slevine.png" alt="Sergey Levine" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://people.eecs.berkeley.edu/~svlevine/" target="_blank">Sergey Levine</a></br>
-			<a href="https://eecs.berkeley.edu/" target="_blank">Dept. of Electrical Engineering and Computer Sciences</a></br><a href="https://www.berkeley.edu/" target="_blank">UC Berkeley</a></br></br>
-			</strong></br>
-			<b>Offline Reinforcement Learning for Human-Interactive Agents</b>
-                        </br> 
-		</p>
-	</div>
--->
-	<div id="euchibe" style="border-top: solid 1px #323232; min-height: 300px;">
-		<img src="images/display/uchibe_face.JPG" alt="Eiji Uchibe" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://researchmap.jp/uchibe/?lang=english" target="_blank">Eiji Uchibe</a></br>
-			<a href="https://bicr.atr.jp/en/" target="_blank">Dept. of Brain Robot Interface</a>,<br/><a href="https://www.atr.jp/index_e.html" target="_blank">Advanced Telecommunications Research Institute International</a></br></br>
-			</strong></br>
-			<b>Human-in-the-loop Policy Learning by Co-Evolution of Human and Generative Imitation Learning</b>
-                        </br> 
-		</p>
-	</div>
 
-	<div id="mgombolay" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/mgombolay.jpg" alt="Matthew Gombolay" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://core-robotics.gatech.edu/people/matthew-gombolay/" target="_blank">Matthew Gombolay</a></br>
-			<a href="https://core-robotics.gatech.edu/" target="_blank">Cognitive Optimization and Relational Robotics Lab</a><br/><a href="https://www.gatech.edu/" target="_blank">Georgia Institute of Technology</a></br></br>
-			</strong></br>
-			<b>Interpretable and Interactive Reinforcement Learning in Human-Robot Teaming</b>
-                        </br> 
-		</p>
-	</div>
-
-		<div id="pulkit" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/pulkit.jpg" alt="Pulkit Agrawal" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://people.csail.mit.edu/pulkitag/" target="_blank">Pulkit Agrawal</a></br>
-			<a href="https://www.csail.mit.edu/" target="_blank">Computer Science and Artificial Intelligence Lab</a><br/><a href="https://www.mit.edu/" target="_blank">Massachusetts Institute of Technology</a></br></br>
-			</strong></br>
-			<b>Human-in-the-loop Sensorimotor Learning</b>
-                        </br> 
-		</p>
-	</div>
-
-	<div id="dana" style="border-top: solid 1px #323232; min-height: 250px;">
-		<img src="images/display/dkulic.jpg" alt="Dana Kulić" height="auto" width="175px" style="float: left; border: solid 1px #000000; margin:10px;">
-		<p style="text-align:justify;">
-			<strong><a href="https://scholar.google.com/citations?user=sL0KJlQAAAAJ" target="_blank">Dana Kulić</a></br>
-			<a href="https://www.monash.edu/engineering/robotics" target="_blank">Monash Robotics.</a><br/><a href="https://www.monash.edu/" target="_blank">Monash University</a></br></br>
-			</strong></br>
-			<b>Reinforcement Learning for HRI: The Role of Simulations</b>
-                        </br> 
-		</p>
-	</div>
-	
 </div>
 
 		</div>
@@ -140,34 +85,6 @@ tr:nth-child(even) {
   </div>
 </div>
 <!-- ####################################################################################################### -->
-
-<div class="wrapper row4">
-  <div class="rnd">
-    <div id="container " class="clear text-center">
-      <!-- ####################################################################################################### -->
-		<div id="content" style="width:95%; text-align:center; margin:10px">
-
-
-<div class="container" style="font-size:18px;">
-	<p><b>Discussion Panel</b></p>
-	<p style="text-align:left"> 
-	<div style="border-top: solid 1px #323232; min-height: 180px;">
-		<table>
-			<tr><th>Name</th><th>Affiliation</th></tr>
-			<tr><td>Pablo Barros</td><td>Brussels Laboratory, Sony Corporation</td></tr>
-			<tr><td>Eiji Uchibe</td><td>Dept. of Brain Robot Interface, Advanced Telecommunications Research Institute International</td></tr>
-			<tr><td>Pulkit Agrawal</td><td>Computer Science and Artificial Intelligence Lab, Massachusetts Institute of Technology</td></tr>
-			<tr><td>Priya Sundaresan</td><td>Computer Science, Stanford</td></tr>
-			<tr><td>Jens Kober</td><td>Cognitive Robotics Dept., T.U. Delft</td></tr>
-		</table>
-	</div>
-
-</div>
-
-</div>
-</div>
-</div>
-</div>
 	
 <div class="wrapper row5">
   <div class="rnd">
