--- a/organizers.html
+++ b/organizers.html
@@ -37,7 +37,7 @@ tr:nth-child(even) {
 <body id="top">
 
 <center>
-<img src="images/harl_icra2024.jpeg" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
+<img src="images/harl_icra2025.png" alt="Logo" height="206px" width="auto" style="float: center; border: solid 1px #000000; margin:10px;">
 
 <!-- ####################################################################################################### -->
 <div class="wrapper row2">
@@ -50,7 +50,7 @@ tr:nth-child(even) {
         <li><a style="font-size: 20px" href="speakers.html" data-target="speakers">Speakers</a></li>
         <li><a style="font-size: 20px" href="cfp.html" data-target="cfp">Submissions</a></li>
         <li><a style="font-size: 20px" href="program.html">Program</a></li>
-        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/2021">2021@ICDL</a></li>
+        <li><a style="font-size: 20px" href="https://harlworkshop.github.io/previous.html">Previous versions</a></li>
       </ul>
     </div>
     <!-- ###### -->
